<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/registro_de_estudiante"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/nombre"
        android:layout_width="352dp"
        android:layout_height="48dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="36dp"
        android:hint="@string/nombres"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/apellido"
        android:layout_width="352dp"
        android:layout_height="48dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="16dp"
        android:hint="@string/apellidos"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nombre" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/dni"
        android:layout_width="352dp"
        android:layout_height="48dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="16dp"
        android:hint="@string/dni"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/apellido" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/codigo"
        android:layout_width="352dp"
        android:layout_height="48dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="16dp"
        android:hint="@string/c_digo_estudiante"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dni" />

    <Button
        android:id="@+id/button"
        android:layout_width="150dp"
        android:layout_height="61dp"
        android:layout_marginStart="130dp"
        android:layout_marginTop="88dp"
        android:backgroundTint="#3b83bd"
        android:text="@string/registrar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/codigo" />

    <TextView
        android:id="@+id/tvMensaje"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Estudiante Registrado"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>